2008-02-10 16:01-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Sources/GNUmakefile: Additional correction.

2008-02-08  Nikolaus Schaller <hns@computer.org>
	* added History and Back/Forward list plus some stubs for a page cache (should cache WebFrame/WebFrameViews)
	* fixed bugs with finalizing loading (e.g. update history after loading jpg or pngs)
	* made (X)(HT)ML parser more robust for embedded spaces and newlinws e.g. <img src = "url" / >
	
2008-01-18 17:21-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Sources/GNUmakefile: Fixed makefile issue.

2008-01-17  Riccardo Mottola <riccardo@kaffe.org>
	* Sources/WebHTMLDocumentView.m: improved HR draw code
	* Sources/DOMHTML.m: parse of shade and size attributes
	
2008-01-16 16:22-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Sources/DOMHTML.m: Added code to add a newline for a <p> element.

2008-01-03  Riccardo Mottola <riccardo@kaffe.org>
	* Sources/DOMHtml.m: removed non-apple hack
	
2007-12-31  Nikolaus Schaller <hns@computer.org>
	* fixed bugs in entities table
	* added preliminary handling for <li>
	
2007-12-17  Nikolaus Schaller <hns@computer.org>
	* improved scroller handling
	
2007-11-20  Riccardo Mottola <riccardo@kaffe.org>
	* Sources/GNUmakefile: added WebPreferences
	
2007-10-13  Nikolaus Schaller <hns@computer.org>
	* improved HTML parsing (handle multiple <body> tags, add <tbody> if not present etc.)
	* fixed several bugs

2007-09-01  Nikolaus Schaller <hns@computer.org> and Riccardo Mottola <riccardo@kaffe.org>
	* AlpenSTEP workshop
	* fixed several bugs

2007-08-??  Nikolaus Schaller <hns@computer.org>
	* added some support for <li>
	* fixed several bugs

2007-07-??  Nikolaus Schaller <hns@computer.org>
	* browser renamed to SWK Browser

2007-06-13  Nikolaus Schaller <hns@computer.org>
	* updated NSXMLParser to do incremental parsing
	* added a DOM Tree Browser to GNUstepWeb

2007-05-15  Richard Frith-Macdonald <rfm@gnu.org>